<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/H_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:linksClickable="false"
                android:text="@string/help_title_text"
                android:textSize="@dimen/help_title_font_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/H_help_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:linksClickable="false"
                android:text="@string/help_introduction"
                android:textSize="@dimen/help_content_font_size"/>

            <TextView
                android:id="@+id/H_help_recipe_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:linksClickable="false"
                android:text="@string/help_recipe_book"
                android:textSize="@dimen/help_title_font_size"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>