<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".View.Activities.RecipeDetailViewActivity">

    <Button
        android:id="@+id/RDV_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/RDV_scroll_view"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/RDV_scroll_view"
        android:onClick="onClickEditButton"
        android:text="@string/edit_button_text"/>

    <ScrollView
        android:id="@+id/RDV_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/RDV_edit_button"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/RDV_preparation_time"
                    style="@style/StandardBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/RDV_cultural_category"
                    style="@style/StandardBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/RDV_meal_type"
                    style="@style/StandardBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/StandardTitle"
                    android:id="@+id/RDV_ingredients_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/ingredients_title"/>

                <TextView
                    style="@style/StandardBody"
                    android:id="@+id/RDV_ingredients_enumeration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/StandardTitle"
                    android:id="@+id/RDV_steps_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/steps_title"/>

                <TextView
                    style="@style/StandardBody"
                    android:id="@+id/RDV_steps_enumeration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        style="@style/StandardBody"
        android:id="@+id/RDV_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RDV_scroll_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/RDV_edit_button"
        android:layout_toLeftOf="@+id/RDV_edit_button"
        android:textStyle="bold"/>

</RelativeLayout>